Bug 393567 - [Vertical Tabs] Collapse status of child nodes of a collapsed node is not preserved after restart
Summary: [Vertical Tabs] Collapse status of child nodes of a collapsed node is not pre...
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: extensions (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-04-27 11:08 UTC by Theo
Modified: 2018-04-29 11:17 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.0.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Theo 2018-04-27 11:08:51 UTC
Normally, collapsing and expanding a node doesn't change the collapse status of the child nodes in the tab tree. This doesn't work when a node is collapsed before Falkon is shut down and then expanded after Falkon has been started again: in the restored session, the child nodes are all expanded now.
Comment 1 David Rosca 2018-04-29 11:17:27 UTC
Git commit bc26e9377ca8d22e81c9234e4f876d204d50ab24 by David Rosca.
Committed on 29/04/2018 at 10:52.
Pushed by drosca into branch 'Falkon/3.0'.

VerticalTabs: Preserve exapnded state of items inside collapsed parent
FIXED-IN: 3.0.1

M  +8    -8    src/plugins/VerticalTabs/tabtreeview.cpp

https://commits.kde.org/falkon/bc26e9377ca8d22e81c9234e4f876d204d50ab24