VerticalTabs: Preserve exapnded state of items inside collapsed parent

BUG: 393567
FIXED-IN: 3.0.1